Nowe funkcjonalności oraz restrukturyzacja
- Wciskając escape pojawia się menu
- Dodano pośmiertny napis
- Funkcje obsługujące różne menu znajdują się w oddzielnym pliku

--- a/Projekt/Projekt C++.vcxproj.filters
+++ b/Projekt/Projekt C++.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="main.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="Menus.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.h">
@@ -33,6 +36,9 @@
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
     <ClInclude Include="main.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
+    <ClInclude Include="Menus.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
   </ItemGroup>
