--- a/Projekt/Projekt C++.vcxproj
+++ b/Projekt/Projekt C++.vcxproj
@@ -146,11 +146,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Character.cpp" />
+    <ClCompile Include="Menus.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.h" />
+    <ClInclude Include="Menus.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
