--- a/Projekt/Projekt C++.vcxproj
+++ b/Projekt/Projekt C++.vcxproj
@@ -148,6 +148,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Character.cpp" />
+    <ClCompile Include="Item.cpp" />
     <ClCompile Include="Menus.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Scenes.cpp" />
@@ -155,6 +156,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.h" />
+    <ClInclude Include="Item.h" />
     <ClInclude Include="Menus.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="Scenes.h" />
